--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,59 @@
 body {
-    background-color: black;
+  background-color: black;
 }
 div {
-    width: 25vw;
-    height: 25vw;
-    text-align: center;
-    margin: 8vw;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #FF9953;
-    border-radius: 2vw;
-    position: relative;
+  width: 25vw;
+  height: 25vw;
+  text-align: center;
+  margin: 8vw;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #ff9953;
+  border-radius: 2vw;
+  position: relative;
 }
 h1 {
-    font-size: 5vw;
-    font-family: cursive;
+  font-size: 5vw;
+  font-family: cursive;
 }
 @property --angle {
-    syntax: "<angle>";
-    initial-value: 0deg;
-    inherits: false;
+  syntax: "<angle>";
+  initial-value: 0deg;
+  inherits: false;
 }
-div::before, div::after {
-    content: '';
-    position: absolute;
-    width: 25vw;
-    height: 25vw;
-    border-radius: 2vw;
-    z-index: -1;
-    background-image: conic-gradient(from var(--angle), red, orange, yellow, green, blue, indigo, purple, red);
-    bottom: 50%;
-    left: 50%;
-    translate: -50% 50%;
-    padding: 0.5vw;
-    animation: bdrdan 2.5s infinite linear;
+div::before,
+div::after {
+  content: "";
+  position: absolute;
+  width: 25vw;
+  height: 25vw;
+  border-radius: 2vw;
+  z-index: -1;
+  background-image: conic-gradient(
+    from var(--angle),
+    red,
+    orange,
+    yellow,
+    green,
+    blue,
+    indigo,
+    purple,
+    red
+  );
+  bottom: 50%;
+  left: 50%;
+  translate: -50% 50%;
+  padding: 0.5vw;
+  animation: bdrdan 2.5s infinite linear;
 }
 div::before {
-    filter: blur(1.5vw);
+  filter: blur(1.5vw);
 }
 @keyframes bdrdan {
-    0% {
-        --angle: 0deg;
-    }
-    100% {
-        --angle: 360deg;
-    }
+  0% {
+    --angle: 0deg;
+  }
+  100% {
+    --angle: 360deg;
+  }
 }
